Add NGINX Proxy Manager configuration and documentation
- Update .gitignore to exclude NGINX Proxy Manager data and Let's Encrypt directories
- Enhance README with NGINX Proxy Manager details and SSL management
- Modify docker-compose.yml to include NGINX Proxy Manager service configuration
- Add Prometheus scrape targets for NGINX Proxy Manager
- Create documentation for Domain and SSL Configuration with NGINX Proxy Manager
- Include relevant images for NGINX Proxy Manager in assets

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,7 @@ archive/
 # Trivy security scan reports
 trivy-*.html
 trivy-results.sarif
+
+# Nginx Proxy Manager data
+configs/nginx-proxy-manager/data/
+configs/nginx-proxy-manager/letsencrypt/
