--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       - app-net
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:5000/ || exit 1"]
+      test: ["CMD", "python", "-c", "import socket; s = socket.create_connection(('localhost', 5000), timeout=3); s.close()"]
       interval: 10s
       timeout: 5s
       retries: 5
